--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="../all.css">
-  <link rel="stylesheet" href="fonts.css">
   <script src="../jquery.js"></script>
   <title>Universitas Teknokrat Indonesia</title>
 </head>
@@ -338,30 +336,13 @@
       <div class="brand">
         <div class="logo">
           <a href="#">
-            <h1><span>Betran</span> Dwi Fadillah 20312098</h1>
+            <h1><span>Betran</span> Dwi Fadillah <br> 20312098 - Informatika</h1>
           </a>
-        </div>
-        <div class="icons">
-          <a href="#" class="fab fa-facebook" data-text="facebook"></a>
-          <a href="#" class="fab fa-twitter" data-text="twitter"></a>
-          <a href="#" class="fab fa-github" data-text="git-hub"></a>
-          <a href="#" class="fab fa-pinterest" data-text="pinterest"></a>
         </div>
       </div>
 
       <div class="contact-info">
-        <div class="info">
-          <a href="#" class="fas fa-map-marker-alt" data-text="xyz address name"></a>
-          <a href="#" class="fas fa-envelope" data-text="example@gmail.com"></a>
-          <a href="#" class="fas fa-phone" data-text="+9100000000"></a>
-        </div>
-      </div>
-
-      <div class="letter">
-        <h1>newsletter</h1>
-        <p>submit your e-mail for latest updates</p>
-        <input type="email" placeholder="e-mail">
-        <input type="submit" placeholder="subscribe">
+        <img src="img/betran.jpg" alt="">
       </div>
 
     </div>
