--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="../jquery.js"></script>
+
   <title>Universitas Teknokrat Indonesia</title>
 </head>
 
@@ -209,6 +210,9 @@
         </div>
       </div>
 
+      <div class="vidio">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/xxW2Bc5vMgw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     </div>
 
     <h1>Galeri Ruangan dan Gedung</h1>
@@ -289,13 +293,10 @@
   <section id="maps">
     <h1>Lokasi</h1>
     <div class="image">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3972.226620207035!2d105.25562721448027!3d-5.382383996096032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e40dadc7970b277%3A0x5b1fe57f83b6416c!2sUniversitas%20Teknokrat%20Indonesia!5e0!3m2!1sid!2sid!4v1666059544180!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-
-    <div class="content">
-      <p>
-        Jl. ZA. Pagar Alam No.9 -11, Labuhan Ratu, Kec. Kedaton, Kota Bandar Lampung, Lampung 35132
-      </p>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3972.226620207035!2d105.25562721448027!3d-5.382383996096032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e40dadc7970b277%3A0x5b1fe57f83b6416c!2sUniversitas%20Teknokrat%20Indonesia!5e0!3m2!1sid!2sid!4v1666059544180!5m2!1sid!2sid"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
   </section>
@@ -307,19 +308,17 @@
 
   <section id="contact">
 
-    <form action="">
-      <h1>get in touch</h1>
-      <input type="text" placeholder="full name">
-      <input type="email" placeholder="e-mail">
-      <input type="number" placeholder="phone">
-      <textarea placeholder="message" cols="30" rows="10"></textarea>
-      <input type="submit" value="send">
-    </form>
-
-    <div class="image">
-      <img src="img/herotekno.jpeg" alt="">
-    </div>
-
+    <div class="content">
+      <h1>Contact</h1>
+      <p>
+        Alamat : Universitas Teknokrat Indonesia - Jl. Zainal Abidin Pagaralam, 9-11 Labuhan Ratu, Kota Bandar Lampung Provinsi Lampung, 35132
+        <br><br>
+        Telp : (0721) 702022 (Hunting)
+        <br><br>
+        WA : 0853 8302 0570 (Chat Only)
+        <br><br>
+        Email : uti@teknokrat.ac.id
+      </p>
   </section>
 
 
